# KoreanSongs

./: CMakeLists.txt  main.cpp  songs.txt
Core/: CMakeLists.txt  CharInput.cpp  CharInput.h  Characters.cpp  Characters.h  Characters2Lines.cpp  Characters2Lines.h  CharactersFromFile.cpp  CharactersFromFile.h  Core.cpp  Core.h  Lines.cpp  Lines.h  Lines2Songs.cpp  Lines2Songs.h  Song.cpp  Song.h  Songs.cpp  Songs.h  Songs2Cue.cpp  Songs2Cue.h  SplitLines.cpp  fileInput.cpp
tests/: CMakeLists.txt  CharInput_test.cpp  Characters2Lines_test.cpp  File2Characters_test.cpp  Lines2Songs_test.cpp  Song_test.cpp  Songs2Cue_test.cpp  fileInput.h  unit_test.cpp
